--- a/index.html
+++ b/index.html
@@ -5,5 +5,18 @@
         <title>Etch A Sketch</title>
         <script src="script.js" defer></script>
     </head>
-    <body></body>
+    <style>
+        .square{
+            width: 6.25%;
+            display: inline-block;
+            border: 1px solid black;
+            box-sizing: border-box;
+        }
+        body{
+            margin: 0;
+        }
+    </style>
+    <body>
+        <div class="container"></div>
+    </body>
 </html>
