--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     </head>
     <style>
         .square{
-            width: 6.25%;
-            display: inline-block;
+            width: 50px;
+            height: 50px;
             border: 1px solid black;
             box-sizing: border-box;
+            /* transition: background-color 2s; */
         }
-        body{
-            margin: 0;
+        .container{
+            width: 800px;
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .changeColor{
+            background-color: aquamarine;
         }
     </style>
     <body>
