--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             display: flex;
             flex-wrap: wrap;
         }
-        .changeColor{
+        .changedColor{
             background-color: aquamarine;
         }
     </style>
