--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     </head>
     <style>
         .square{
-            width: 50px;
-            height: 50px;
+            /* width: 50px;
+            height: 50px; */
             border: 1px solid black;
             box-sizing: border-box;
             /* transition: background-color 2s; */
         }
         .container{
-            width: 800px;
+            width: 500px;
+            height: 500px;
             display: flex;
             flex-wrap: wrap;
         }
@@ -23,6 +24,8 @@
         }
     </style>
     <body>
+        <input type="range" id="grid-size" min="1" max="64" value="16" step="1">
         <div class="container"></div>
+        <button class="reset">Reset</button>
     </body>
 </html>
